src/components/footer/FooterCSS.css
.footer {
  background: #262626;
  color: #fff;
  padding: 20px 0;
}

.footer-content {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap-reverse;
}

.footer-content .footer-left {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  flex: 1 1 60%;
}

.footer-content .bae {
  color: #fff;
  flex: 1 1 40%;
}

.footer-content .bae h3 {
  font-size: 2rem;
  margin: 0;
}

.footer-content .bae p {
  margin-bottom: 32px;
  margin-top: 8px;
}

.footer-content .bae .btn {
  align-self: stretch;
}

.footer-content .bae p {
  color: #888;
}

.footer-list {
  display: flex;
  justify-content: center;
  margin: 0;
  padding: 0;
}

.footer-list .footer-list-item {
  list-style: none;
}

.footer-bottom {
  margin-top: 32px;
}

.footer-list-link {
  width: 30px;
  height: 30px;
  background-color: #888;
  text-align: center;
  line-height: 30px;
  font-size: 20px;
  margin-right: 10px;
  display: block;
  border-radius: 50%;
  position: relative;
  overflow: hidden;
  border: 3px solid #888;
  z-index: 1;
  transition: 0.5s;
}

.footer-list .footer-list-item .footer-list-link .footer-icon {
  position: relative;
  color: #262626;
  transition: 0.5s;
  z-index: 3;
}

.footer-list .footer-list-item .footer-list-link:hover {
  border: 3px solid #fff;
  background-color: #fff;
}

.footer-list .footer-list-item .footer-list-link:hover .footer-icon {
  color: #fff;
  transform: rotateY(360deg);
}

.footer-list .footer-list-item .footer-list-link:before {
  content: '';
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  height: 100%;
  background: #f00;
  transition: 0.5s;
  z-index: 2;
}

.footer-list .footer-list-item .footer-list-link:hover:before {
  top: 0;
}

.footer-list .footer-list-item:nth-child(1) a:before {
  background: #3b5999;
}

.footer-list .footer-list-item:nth-child(2) a:before {
  background: #55acee;
}

.footer-list .footer-list-item:nth-child(3) a:before {
  background: #0077b5;
}

.footer-list .footer-list-item:nth-child(4) a:before {
  background: #8a3ab9;
}

/*******************************************************************************/
.links-footer {
  color: #888;
  font-size: 11px;
  display: flex;
  justify-content: center;
}

.link-item {
  padding-right: 6px;
  transition: all 0.3s;
  text-transform: uppercase;
}

.link-item:hover {
  color: #fff;
}

.legal {
  text-align: center;
  font-size: 14px;
  color: #888;
}

@media only screen and (max-width: 900px) {
  .footer-content {
    padding: 0px 20px;
  }
}

@media only screen and (max-width: 800px) {
  .footer-content {
    flex-direction: column;
    align-items: center;
    padding: 0;
    text-align: center;
  }

  .links-footer {
    padding: 0.5rem 0;
  }
}

@media only screen and (max-width: 400px) {
  .links-footer {
    font-size: 10px;
  }

  .link-item {
    padding-right: 4px;
  }
}

